--- a/index.html
+++ b/index.html
@@ -1,57 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
-    <title>Five Day Weather Forecast</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./style.css">
+  <title>Five Day Weather Forecast</title>
+  <script
+  src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+  integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+  crossorigin="anonymous"
+  ></script>
 </head>
+
 <body>
-    <header>
-        <h1>Your Five Day Forecast</h1>
-        <h2>Take a look at the weather conditions over the next five days!</h2>
-    </header>
-    <div id="card-container">
-     <div class="card" style="width: 22rem;">
-        <img>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+  <header>
+    <h1>Your Five Day Forecast</h1>
+    <h2>Take a look at the weather conditions over the next five days!</h2>
+  </header>
+  <div id="currentConditions">
+    <h2 id="displayDate"><img src="https://openweathermap.org/img/wn/10d@2x.png"></h2>
+    <p>Temperature:</p> 
+    <p>Humidity:</p>
+    <p>Wind:</p>
+  </div>
+  <aside>
+    <div id="searchBox">
+      <form id="cityInput"><input id="cityName"><button type="submit">Search</button></form>
+      <ul id="cityHistory"></ul>
+    </div>
+  </aside>
+  <div id="card-container" id="forecast">
+    <div class="card" style="width: 18rem;" style="height: 40rem;">
+      <img>
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">Temperature:</p>
+        <p class="card-text">Humidity:</p>
+        <p class="card-text">Wind Speed:</p>
       </div>
-      <div class="card" style="width: 22rem;">
-        <img>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    </div>
+    <div class="card" style="width: 18rem;" style="height: 40rem;">
+      <img>
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">Temperature:</p>
+        <p class="card-text">Humidity:</p>
+        <p class="card-text">Wind Speed:</p>
       </div>
-      <div class="card" style="width: 22rem;">
-        <img>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    </div>
+    <div class="card" style="width: 18rem;" style="height: 40rem;">
+      <img>
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">Temperature:</p>
+        <p class="card-text">Humidity:</p>
+        <p class="card-text">Wind Speed:</p>
       </div>
-      <div class="card" style="width: 22rem;">
-        <img>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    </div>
+    <div class="card" style="width: 18rem;" style="height: 40rem;">
+      <img>
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">Temperature:</p>
+        <p class="card-text">Humidity:</p>
+        <p class="card-text">Wind Speed:</p>
       </div>
-      <div class="card" style="width: 22rem;">
-        <img>
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    </div>
+    <div class="card" style="width: 18rem;" style="height: 40rem;">
+      <img>
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">Temperature:</p>
+        <p class="card-text">Humidity:</p>
+        <p class="card-text">Wind Speed:</p>
       </div>
+    </div>
+<script src="script.js"></script>
 </body>
+
 </html>
