finished javascript functions and found two typos preventing the page from behaving how intended. Completed README file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <h2>Take a look at the weather conditions over the next five days!</h2>
   </header>
   <div id="currentConditions">
-    <h2 id="displayDate"><img src="https://openweathermap.org/img/wn/10d@2x.png"></h2>
+    <h2 id="displayDate"></h2>
+    <!-- <img src="https://openweathermap.org/img/wn/10d@2x.png"> -->
     <p>Temperature:</p> 
     <p>Humidity:</p>
     <p>Wind:</p>
@@ -28,10 +29,9 @@
   <aside>
     <div id="searchBox">
       <form id="cityInput"><input id="cityName"><button type="submit">Search</button></form>
-      <ul id="cityHistory"></ul>
     </div>
   </aside>
-  <div id="card-container" id="forecast">
+  <div class="card-container" id="forecast">
     <div class="card" style="width: 18rem;" style="height: 40rem;">
       <img>
       <div class="card-body">
